--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!---nav bar start-->
     <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Coder Protfolio </a>
+          <a class="navbar-brand" href="#">Coder Portfolio </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
